fix : 코스 디테일 수정